Supplier APIs
